--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -8,8 +8,8 @@
     <p>Lets get started</p>
   </div>
 
-  <ion-input placeholder="Username" class="primary-input"></ion-input>
-  <ion-input placeholder="Password" type="password" class="primary-input"></ion-input>
+  <ion-input [(ngModel)]="email" placeholder="Username" class="primary-input"></ion-input>
+  <ion-input [(ngModel)]="password" placeholder="Password" type="password" class="primary-input"></ion-input>
 
   <div class="ion-margin-top ion-text-right forget">
     <a>Forgot Password?</a>
